K8S/internet/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: jesa
spec:
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 4000
  type: ClusterIP
