K8S/internet/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: jesa-gateway
  namespace: jesa
spec:
  gatewayClassName: envoy
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All

    - name: https
      protocol: HTTPS
      port: 443
      hostname: jesa.aymanekenbouch.online
      tls:
        mode: Terminate
        certificateRefs:
          - name: jesa-tls-cert
