K8S/internet/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jesa-routes
  namespace: jesa
spec:
  parentRefs:
    - name: jesa-gateway

  hostnames:
    - jesa.aymanekenbouch.online

  rules:
    # Backend routes — must come BEFORE the catch-all
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: backend-service
          port: 80

    - matches:
        - path:
            type: PathPrefix
            value: /auth
      backendRefs:
        - name: backend-service
          port: 80

    - matches:
        - path:
            type: PathPrefix
            value: /health
      backendRefs:
        - name: backend-service
          port: 80

    - matches:
        - path:
            type: Exact
            value: /swagger.json
      backendRefs:
        - name: backend-service
          port: 80

    - matches:
        - path:
            type: PathPrefix
            value: /api-docs
      backendRefs:
        - name: backend-service
          port: 80

          
    # Frontend — catch all
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend-service
          port: 80
